@startuml
class Subject{
   - List<Observer> observerList
   - int state
   + void updateState(int state)
   + void attach(Observer observer)
   + void detach(Observer observer)
   - void notifyObserver()
}
interface Observer{
   + {abstract} void update(int state)
}
class LogObserver{
   + void update(int state)
}
LogObserver ..|> Observer
Subject --> Observer
@enduml